# c5-spa-dashboard

./: .gitignore  README.md  SPA-Dashboard.spec  dashboard_view.py  main.py  pyproject.toml
assets/: PMI AWS CA v3.crt  PMI Sub CA v3.crt  materi.7z  ots.spappa.aws.private-pmideep.biz.crt  response3.html  spa3.html
components/: header_frame.py  history_window.py  issue_card.py  sidebar.py  target_editor.py
hooks/: runtime_hook_patched_hashlib.py
services/: logging_service.py  record_service.py  spa_service.py
src/: dashboard_view.py
src/components/: history_window.py  issue_card.py  manual_window.py  report_toplevel.py  sidebar.py  table_frame.py  target_editor.py
src/services/: logging_service.py  record_service.py  spa_service.py
src/utils/: app_config.py  auth.py  constants.py  csvhandle.py  helpers.py  material_theme.py
tests/: test_material_theme.py  test_md4.py  test_spa_service.py  test_spa_service_cleaning.py
utils/: app_config.py  auth.py  constants.py  csvhandle.py  helpers.py  material_theme.py  patched_hashlib.py
