[project]
name = "c5-spa-dashboard"
version = "0.1.0"
description = "Dashboard Tkinter untuk memonitor data SPA, mencatat issue card, dan menyusun laporan harian."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "async-tkinter-loop>=0.10.2",
    "customtkinter>=5.2.2",
    "lxml>=6.0.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "requests-ntlm2>=6.6.0",
    "tabulate>=0.9.0",
    "ttkbootstrap>=1.18.2",
    "ttkwidgets>=0.13.0",
    "pycryptodomex>=3.20.0",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
