[project]
name = "c5-spa-dashboard"
version = "0.1.0"
description = "Dashboard Tkinter untuk memonitor data SPA, mencatat issue card, dan menyusun laporan harian."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "async-tkinter-loop>=0.10.2",
    "customtkinter>=5.2.2",
    "httpx>=0.28.1",
    "httpx-ntlm>=1.4.0",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "pydantic>=2.12.4",
    "qrcode>=8.2",
    # Replaced requests + requests-ntlm2 with httpx + httpx-ntlm
    "tabulate>=0.9.0",
    "ttkbootstrap>=1.18.2",
    "ttkwidgets>=0.13.0",
]

[dependency-groups]
dev = ["pyinstaller>=6.16.0", "pytest>=9.0.1"]
